execute bootRun task with --module-path, not -cp